2005-05-03  Release Manager

	* GCC 3.3.6 Released.

2005-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/18644
	* call.c (build_new_op): Remove check for warn_synth.

2004-12-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/17456
	* cvt.c (convert_to_void): Set expr to void_zero_node after
	overload failure.

2004-12-15  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/16806
	* error.c (dump_expr) [BASELINK]: Use dump_expr.

2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/17868
	* error.c (dump_expr): Add missing case for RDIV_EXPR.

2004-12-09  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/16681
	* init.c (build_zero_init): Build a RANGE_EXPR for an array
	initializer.

2004-09-30  Release Manager

	* GCC 3.3.5 Released.

2004-09-21  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	* decl.c (reshape_init): Remove unused variable.

2004-09-21  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14179
	* decl.c (reshape_init): Extract array handling into...
	(reshape_init_array): New function. Use integers instead of trees
	for indices.

2004-09-13  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/15857
	Backport from gcc-3_4-branch
	2004-08-24  Jason Merrill  <jason@redhat.com>
	PR c++/15461
	* semantics.c (nullify_returns_r): Replace a DECL_STMT
	for the NRV with an INIT_EXPR.

2004-07-24  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/16175
	* error.c (dump_type) <BOUND_TEMPLATE_TEMPLATE_PARM case>: Output
	cv qualifier.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline:
	2004-03-18  Mark Mitchell  <mark@codesourcery.com>
	* call.c (build_conditional_expr): Do not call force_rvalue for
	operands of void_type when the conditional expression itself has
	void type.

2004-05-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Make-lang.in (cp/init.o): Depend on diagnostic.h.